# attendance-tracker

./: .gitignore  LICENSE  README.md  pyproject.toml
attendancetracker/: scratch.py  tracker.py
