[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "attendancetracker"
version = "0.0.1"
authors = [
  { name="Josh Hoffman", email="jbhoffman@utexas.edu" },
]
description = "A project to pick and track students in my CS class"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jbhoffman613/attendance-tracker"